--- a/index.html
+++ b/index.html
@@ -51,12 +51,17 @@
       </div>
     </header>
 
-    <div class="game-area card">
-      <h2 id="question">Pergunta</h2>
-      <div id="options" class="options-grid"></div>
-      <div id="drop-zone" class="drop-zone">Arraste a resposta aqui</div>
-      <div id="feedback" class="feedback"></div>
-    </div>
+    <main class="container">
+      <div class="col termos">
+        <h2>Termos</h2>
+        <ul id="lista-termos" class="grid-termos"></ul>
+      </div>
+      <div class="col definicoes">
+        <h2>Definições</h2>
+        <ul id="lista-definicoes" class="grid-definicoes"></ul>
+      </div>
+    </main>
+    <div id="feedback" class="feedback"></div>
 
   
   </section>
