--- a/index.html
+++ b/index.html
@@ -50,20 +50,33 @@
     </div>
   </section>
 
+  <!-- NOVA TELA DE MENU PÓS-LOGIN -->
+  <section id="tela-menu" class="tela">
+    <div class="card">
+      <h2>Bem-vindo!</h2>
+      <p class="sub">Escolha o que deseja fazer:</p>
+      <div class="quiz-buttons">
+        <button id="btn-iniciar" class="btn primario">Iniciar Quiz Padrão</button>
+        <button id="btn-criar-quiz" class="btn secundario">Criar Meu Próprio Quiz</button>
+        <button id="btn-sair" class="btn">Sair</button>
+      </div>
+    </div>
+  </section>
+
   <!-- TELA SOBRE O JOGO -->
   <section id="tela-sobre" class="tela">
     <div class="card">
       <h2>Sobre o Jogo</h2>
       <p class="sub">
-        Este quiz tem como objetivo testar seus conhecimentos sobre HTML, CSS e DOM,
-        por meio de um jogo interativo de arrastar e soltar. Crie seus próprios quizzes
-        ou jogue o quiz padrão e desafie seus amigos!
+        Este quiz testa seus conhecimentos sobre HTML, CSS e DOM
+        em um jogo interativo de arrastar e soltar. Você pode jogar
+        o quiz padrão ou criar o seu próprio!
       </p>
       <button id="btn-voltar-sobre" class="btn">Voltar</button>
     </div>
   </section>
 
-  <!-- TELA DE CRIAÇÃO DE QUIZ (original) -->
+  <!-- TELA DE CRIAÇÃO DE QUIZ -->
   <section id="tela-criar-quiz" class="tela">
     <div class="card">
       <h2>Criar Novo Quiz</h2>
