--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2>Bem-vindo!</h2>
       <p class="sub">Escolha o que deseja fazer:</p>
       <div class="quiz-buttons">
-        <button id="btn-iniciar" class="btn primario">Iniciar Quiz Padrão</button>
+        <button id="btn-iniciar" class="btn primario">Iniciar Quiz</button>
         <button id="btn-criar-quiz" class="btn secundario">Criar Meu Próprio Quiz</button>
         <button id="btn-sair" class="btn">Sair</button>
       </div>
