--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
             
             <div class="authors-list">
                 <div class="author-item">
-                    <img src="avatar-placeholder.png" alt="Avatar Thalita" class="author-avatar">
+                    <img src="https://i.imgur.com/QAwtebI.png" alt="Avatar Thalita" class="author-avatar">
                     <p>Thalita Ferreira</p>
                 </div>
                 <div class="author-item">
-                    <img src="avatar-placeholder.png" alt="Avatar Amanda" class="author-avatar">
+                    <img src="https://i.imgur.com/rtBzvDG.jpeg" alt="Avatar Amanda" class="author-avatar">
                     <p>Amanda Paiva</p>
                 </div>
                 <div class="author-item">
-                    <img src="avatar-placeholder.png" alt="Avatar Sophia" class="author-avatar">
+                    <img src="https://i.imgur.com/ZfLVNGl.png" alt="Avatar Sophia" class="author-avatar">
                     <p>Sophia Scardua</p>
                 </div>
                 <div class="author-item">
-                    <img src="avatar-placeholder.png" alt="Avatar Valentina" class="author-avatar">
+                    <img src="https://i.imgur.com/xY8hVdx.png" alt="Avatar Valentina" class="author-avatar">
                     <p>Valentina Sobral</p>
                 </div>
             </div>
